--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
   
 spring:
   datasource:
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://114.67.105.222:3306/boot_security?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&useSSL=false
     username: root
     password: Hefei19881002
@@ -25,3 +25,6 @@ spring:
       stat-view-servlet:
         allow: 127.0.0.1
 param: 234234
+spider: 
+  url:
+    nima: http://www.nimadaili.com
